--- a/cart.html
+++ b/cart.html
@@ -69,18 +69,17 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="image ">
-                      <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
+                      <img class="w-100" src="images/product-shop/producto3.jpg">
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
-                    <h5>Nombre del producto</h5>
+                    <h5>COPO MANGO 15 CM SPINNING KAQTUS</h5>
 
                     <div class="mt-1 mb-0 text-muted small">
-                      <span>categoria 1</span>
+                      <span>Accesorios</span>
                       <span class="text-primary"> • </span>
-                      <span>categoria 2</span>
-                      <span class="text-primary"> • </span>
-                      <span> categoria 3<br /></span>
+                      <span>Accesorios de Pesca</span>
+                      <span class="text-primary"></span>
                     </div>
                     <div class="mt-1 mb-0 text-muted small">
                       <span>Cantidad</span>
@@ -88,7 +87,7 @@
                       <span>1</span>
                     </div>
                     <div class="d-flex flex-row align-items-center mb-1">
-                      <h4 class="mb-1 me-1 mt-3">$13.99</h4>
+                      <h4 class="mb-1 me-1 mt-3">$2,187.00</h4>
                     </div>
 
                   </div>
@@ -112,18 +111,17 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="image ">
-                      <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
+                      <img class="w-100" src="images/product-shop/producto4.jpg">
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
-                    <h5>Nombre del producto</h5>
+                    <h5>CAÑA MARINE SPORTS LAGUNA 2 MOL LA2-S601MH 15-30LB (1,83 MTS) </h5>
 
                     <div class="mt-1 mb-0 text-muted small">
-                      <span>categoria 1</span>
+                      <span>Cañas</span>
                       <span class="text-primary"> • </span>
-                      <span>categoria 2</span>
-                      <span class="text-primary"> • </span>
-                      <span> categoria 3<br /></span>
+                      <span>Cañas de Embarcado</span>
+                      <span class="text-primary"> </span>
                     </div>
                     <div class="mt-1 mb-0 text-muted small">
                       <span>Cantidad</span>
@@ -131,7 +129,7 @@
                       <span>1</span>
                     </div>
                     <div class="d-flex flex-row align-items-center mb-1">
-                      <h4 class="mb-1 me-1 mt-3">$13.99</h4>
+                      <h4 class="mb-1 me-1 mt-3">$10,887.00</h4>
                     </div>
 
                   </div>
@@ -155,18 +153,15 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="image ">
-                      <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
+                      <img class="w-100" src="images/product-shop/producto5.jpg">
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
-                    <h5>Nombre del producto</h5>
+                    <h5>CHALECO DE PESCA SPINIT STX BASIC</h5>
 
                     <div class="mt-1 mb-0 text-muted small">
-                      <span>categoria 1</span>
-                      <span class="text-primary"> • </span>
-                      <span>categoria 2</span>
-                      <span class="text-primary"> • </span>
-                      <span> categoria 3<br /></span>
+                      <span>Indumentaria</span>
+                      <span class="text-primary"> </span>
                     </div>
                     <div class="mt-1 mb-0 text-muted small">
                       <span>Cantidad</span>
@@ -174,7 +169,7 @@
                       <span>1</span>
                     </div>
                     <div class="d-flex flex-row align-items-center mb-1">
-                      <h4 class="mb-1 me-1 mt-3">$13.99</h4>
+                      <h4 class="mb-1 me-1 mt-3">$8,599.00</h4>
                     </div>
 
                   </div>
