--- a/product.html
+++ b/product.html
@@ -86,33 +86,30 @@
                 <input type="radio" name="selection" value="imagen2" id="img_2">
                 <input type="radio" name="selection" value="imagen3" id="img_3">
                 <input type="radio" name="selection" value="imagen4" id="img_4">
-                <img src="images/product-shop/product-1.webp">
-                <img src="images/product-shop/product-1.webp">
-                <img src="images/product-shop/product-1.webp">
-                <img src="images/product-shop/product-1.webp">
+                <img src="images/product-shop/producto2.jpg">
+                <img src="images/product-shop/producto2.1.jpg">
+                <img src="images/product-shop/producto2.3.jpg">
+                <img src="images/product-shop/producto2.4.jpg">
             </div>
 
             <!-- Product ends -->
             <div class="container-data-product col-4">
                 <div class="product-data">
-                    <h2>Producto</h2>
-                    <h3>$39.99</h3>
+                    <h2>BLOOD 9000 GAMMA C/ CARRETE EXTRA</h2>
+                    <h3>$32,223.00</h3>
                 </div>
 
                 <div id="description">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore corrupti illum dolorum totam culpa
-                    necessitatibus quidem modi expedita repellendus quaerat porro minus, et magni hic aliquid
-                    exercitationem in. Molestias, necessitatibus!
+                        Blood 9000 Gamma C/ Carrete Extra - 6+1 rulemanes de acero inoxidable - Sin fin de acero inoxidable para un Devanado excelente y prolijo. - Eje y partes de acero inoxidable - Cuerpo extra liviano de carbono de alta resistencia - Diseño de carrete de casting - Corona de potencia - Balanceado por computadora - Sistema de frenado rapido - Rulemanes: 6+1 - Apto para largos lances. - Peso del reel 530 Grs. - 2 Carretes de aluminio. - Manivela rígida de aluminio. - Sistema Anti-reverse infinito. - Gear Ratio 4.6:1 - Capacidad 515 mts - 0,30 mm
 
                     </p>
                 </div>
                 <div id="producto-categoria" class="mt-1 mb-0 text-muted small">
-                    <span>categoria 1</span>
+                    <span>Reeles</span>
                     <span class="text-primary"> • </span>
-                    <span>categoria 2</span>
-                    <span class="text-primary"> • </span>
-                    <span> categoria 3<br /></span>
+                    <span>Reeles Frontales</span>
+                    <span class="text-primary"></span>
                 </div>
 
                 <br />
@@ -120,7 +117,7 @@
                  <div class="product-cantidad">
                     <label for="cantidad">
                         Cantidad:
-                        <input class="product-cantidad" type="number" id="cantidad" placeholder="1" maxlength="3">
+                        <input class="product-cantidad" type="number" id="cantidad" placeholder="1" min="1" maxlength="2">
                       </label>
                  </div>
                     <div class="producto-add-cart">
