--- a/shop.html
+++ b/shop.html
@@ -10,9 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- Rutas-->
-    <link rel="stylesheet" href="./style-shop.css">
-    <link rel="shortcut icon" href="./img/Logo.png" type="image/x-icon" /> 
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/shop.css">
 </head>
 
 <body>
@@ -147,7 +149,7 @@
 
 
 
-        <!--Direccion Boostrap js-->
+        <!--Bootstrap-->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" ></script>
 
 </body>
