--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,9 @@
         <title>El anzuelo</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
         <link rel="shortcut icon" href="favicon"/>
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       </head>
       <body>
         <header>
