--- a/shop.html
+++ b/shop.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="esp">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
+  <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
+
   <!-- Fonts -->
-  <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-  <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <!-- CSS-->
-  <link rel="stylesheet" type="text/css" href="./css/header.css">
-  <link rel="stylesheet" type="text/css" href="./css/footer.css">
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
-  <link rel="stylesheet" type="text/css" href="./css/shop.css">
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- Iconos -->
+  <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+  <!-- normalize -->
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+
+  <!-- Estilos Header -->>
+  <link rel="stylesheet" href="./css/header.css">
+  <!-- Estilos  -->
+  <link rel="stylesheet" type="text/css" href="css/shop.css">
+  <!-- Estilos Footer -->
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
@@ -66,21 +78,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./img/shop5.jpg" class="d-block w-100" alt="...">
+        <img src="./images/shop/index/shop5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <!-- <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p> -->
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./img/shop7.jpg" class="d-block w-100" alt="...">
+        <img src="./images/shop/index/shop7.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <!-- <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p> -->
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./img/shop6.jpg" class="d-block w-100" alt="...">
+        <img src="./images/shop/index/shop6.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <!-- <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p> -->
@@ -114,7 +126,7 @@
 
     <div class="cat-container d-flex justify-content-center justify-content-around">
       <div class="col-4 d-flex flex-column align-items-center">
-        <div class="card col-8"> <img class="card-img-top" src="./img/shop1.jfif.crdownload" alt="card image cap">
+        <div class="card col-8"> <img class="card-img-top" src="./images/shop/index/shop1.jfif.crdownload" alt="card image cap">
           <div class="card-body">
           </div>
         </div>
@@ -122,7 +134,7 @@
 
       </div>
       <div class="col-4 d-flex flex-column align-items-center">
-        <div class="card col-9"> <img class="card-img-top" src="./img/shop4.jpg" alt="card image cap">
+        <div class="card col-9"> <img class="card-img-top" src="./images/shop/index/shop4.jpg" alt="card image cap">
           <div class="card-body">
           </div>
         </div>
@@ -130,7 +142,7 @@
 
       </div>
       <div class="col-4 d-flex flex-column align-items-center">
-        <div class="card col-9"> <img class="card-img-top" src="./img/shop3.jpg" alt="card image cap">
+        <div class="card col-9"> <img class="card-img-top" src="./images/shop/index/shop3.jpg" alt="card image cap">
           <div class="card-body">
           </div>
         </div>
