--- a/productos.html
+++ b/productos.html
@@ -73,10 +73,10 @@
 
                 <div>
                     <!-- Grid row -->
-                    <div class="grid">
+                    <div class="row">
 
                         <!-- Categoria -->
-                        <div class="col-md-6 col-lg-12 mb-5">
+                        <div class=" row col-md-6 col-lg-12 mb-5">
                             <h5 class="font-weight-bold dark-grey-text mb-2"><strong>Categorias</strong></h5>
 
                             <!--Radio group-cat-->
