--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="#">E-SHOP</a></li>
+        <li><a href="shop.html">E-SHOP</a></li>
         <li><a href="#">FORO</a></li>
         <li><a href="blog.html">BLOG</a></li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
