--- a/calendarios.html
+++ b/calendarios.html
@@ -31,7 +31,7 @@
     <!-- header -->
     <link rel="stylesheet" href="./css/header.css">
     <!-- Estilos Calendarios  -->
-    <link rel="stylesheet" href="./css/calendarios.css"
+    <link rel="stylesheet" href="./css/calendarios.css">
 
 
     <!-- Estilos E-Shop -->
@@ -62,11 +62,11 @@
         <div id="menu">
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">CALENDARIO</a></li>
-                <li><a href="#">E-SHOP</a></li>
-                <li><a href="#">FORO</a></li>
+                <li><a href="calendarios.html">CALENDARIO</a></li>
+                <li><a href="shop.html">E-SHOP</a></li>
+                <li><a href="foro.html">FORO</a></li>
                 <li><a href="blog.html">BLOG</a></li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </div>
     </nav>
@@ -78,7 +78,7 @@
 
                 <h5 class="mt-5">CALENDARIOS</h5>
 
-                <h2 ">¡AGENDA TODA LA INFORMACION SOBRE PESCA!</h2>
+                <h2 >¡AGENDA TODA LA INFORMACION SOBRE PESCA!</h2>
             <p>Aqui podras ver y agendar todas las fechas importantes relacionadas a la pesca
                 deportiva, apertura de pesca de cada provincia y eventos importantes no te quedes afuera </p>
             <br>
