--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- normalize -->
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
-  <!-- Estilos Header -->>
+  <!-- Estilos Header -->
   <link rel="stylesheet" href="./css/header.css">
   <!-- Estilos  -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
