--- a/shipping.html
+++ b/shipping.html
@@ -45,11 +45,11 @@
     <div id="menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#">CALENDARIO</a></li>
-        <li><a href="#">E-SHOP</a></li>
-        <li><a href="#">FORO</a></li>
+        <li><a href="calendarios.html">CALENDARIO</a></li>
+        <li><a href="shop.html">E-SHOP</a></li>
+        <li><a href="foro.html">FORO</a></li>
         <li><a href="blog.html">BLOG</a></li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
