--- a/product.html
+++ b/product.html
@@ -86,10 +86,10 @@
                 <input type="radio" name="selection" value="imagen2" id="img_2">
                 <input type="radio" name="selection" value="imagen3" id="img_3">
                 <input type="radio" name="selection" value="imagen4" id="img_4">
-                <img src="images/product-shop/producto2.jpg">
-                <img src="images/product-shop/producto2.1.jpg">
-                <img src="images/product-shop/producto2.3.jpg">
-                <img src="images/product-shop/producto2.4.jpg">
+                <img src="./images/product-shop/producto2.jpg">
+                <img src="./images/product-shop/producto2.1.jpg">
+                <img src="./images/product-shop/producto2.3.jpg">
+                <img src="./images/product-shop/producto2.4.jpg">
             </div>
 
             <!-- Product ends -->
