--- a/productos.html
+++ b/productos.html
@@ -163,7 +163,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Salidas
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Salidas
                                         Conicas 10
                                         Unid
                                         Z-eeg Fishing Fluo</a></strong>
