--- a/productos.html
+++ b/productos.html
@@ -206,7 +206,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Caja
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Caja
                                         Organizadora
                                         Señuelos
                                         Anzuelos Etc Mauri Nro 25</a></strong>
@@ -251,7 +252,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html"
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+
                                         class="dark-grey-text">Intercambiador
                                         Señuelos
                                         Z-eeg Quick Snap N°2 Bister 10 Unid</a></strong>
@@ -299,7 +301,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Reel
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Reel
                                         rotativo Marine
                                         Sports Caster Power Plus 400 derecho color negro</a></strong>
                             </h5><span class="badge badge-danger mb-2">Reeles</span>
@@ -341,7 +344,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Reel
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Reel
                                         frontal Marine
                                         Sports Arena 4000 FD derecho/izquierdo color plateado</a></strong>
                             </h5><span class="badge badge-danger mb-2">Reeles</span>
@@ -385,7 +389,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Caña Para
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Caña Para
                                         Reel
                                         Rotativo Marine Sports Laguna 20-40 Lbs</a></strong>
                             </h5><span class="badge badge-danger mb-2">Cañas</span>
@@ -432,7 +437,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Wader
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Wader
                                         Pesca</a></strong>
                             </h5><span class="badge badge-danger mb-2">Indumentaria</span>
 
@@ -473,7 +479,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Gorro
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Gorro
                                         Sombrero Para
                                         Pesca De Ala Waterdog</a></strong>
                             </h5><span class="badge badge-danger mb-2">Indumentaria</span>
@@ -517,7 +524,8 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="producto.html" class="dark-grey-text">Botas De
+                            <h5 class="card-title mb-1"><strong><a href="product.html"
+ class="dark-grey-text">Botas De
                                         Neoprene Dago
                                         Pesca Kayac Nautica</a></strong>
                             </h5><span class="badge badge-danger mb-2">Indumentaria</span>
