--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 
       <!-- Botón Ver más -->
-      <a href="shop-index.html">
+      <a href="shop.html">
         <button class="btn-more"><span>Ver más</span></button>
       </a>
       <!-- /Botón Ver más -->
@@ -348,7 +348,7 @@
         conversacion y sacarte tus dudas. </p>
       <br>
       <!-- Botón Ver más -->
-      <a href="#">
+      <a href="foro.html">
         <button class="btn-more"><span>Ver más</span></button>
       </a>
       <!-- /Botón Ver más -->
