--- a/cart.html
+++ b/cart.html
@@ -69,7 +69,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="image ">
-                      <img class="w-100" src="images/product-shop/producto3.jpg">
+                      <img class="w-100" src="images/shop/product-shop/producto3.jpg">
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -111,7 +111,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="image ">
-                      <img class="w-100" src="images/product-shop/producto4.jpg">
+                      <img class="w-100" src="images/shop/product-shop/producto4.jpg">
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -153,7 +153,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="image ">
-                      <img class="w-100" src="images/product-shop/producto5.jpg">
+                      <img class="w-100" src="images/shop/product-shop/producto5.jpg">
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -223,7 +223,7 @@
             <button type="submit" class="btn btn-secondary">Aplicar</button>
           </div>
         </form>
-        <a href="/cart.html" >
+        <a href="checkout.html" >
           <button class="btn-cont mt-3"> Continuar
             <div class="icon">
               <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
