--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
 <!DOCTYPE html>
+
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
+  <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,19 +20,16 @@
 
   <!-- Iconos -->
   <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+  <!-- normalize -->
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
   <!-- Estilos Header -->
-    <!-- propias-header -->
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <!-- header -->
   <link rel="stylesheet" href="./css/header.css">
-  <!-- Estilos Calendarios  -->
-
-
-
-
-
-
+  <!-- Estilos  -->
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <!-- Estilos Footer -->
   <link rel="stylesheet" href="./css/footer.css">
 </head>
@@ -40,18 +39,18 @@
 
   <!-- Header -->
   <header>
-    <a ref="index.html" class="logo">
-      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de la tienda">
+    <a href="index.html" class="logo">
+
+    <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+
     </a>
     <div>
-
       <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
       <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
-      <a href="login.html">
+      <a href="login-registro.html">
         <button class="btn-more"><span>Ingresar</span></button>
       </a>
-
     </div>
   </header>
   <!-- NAV MENU -->
@@ -59,181 +58,17 @@
     <div id="menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#">CALENDARIO</a></li>
-        <li><a href="#">E-SHOP</a></li>
-        <li><a href="#">FORO</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="calendarios.html">CALENDARIO</a></li>
+        <li><a href="shop.html">E-SHOP</a></li>
+        <li><a href="foro.html">FORO</a></li>
+        <li><a href="blog.html">BLOG</a></li>
+        <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
-
-  <!-- Slider -->
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./images/header/img11.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./images/header/img22.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./images/header/img33.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+  <div class="clima-sector">
+    <img src="images/clima/clima.jpg"/ class="al">  
   </div>
-
-  <!-- Slider ends -->
-
-
-
- <!-- SECCION CLIMA - CALENDARIOS 
-  ================================================== -->
-
-    <div class="container clima-calendario d-flex flex-column align-items-center ">
-
-        <!-- Three columns of text below the carousel -->
-
-
-        <div class="calendario__text col-md-6 mb-4">
-            <h2 class="calendario__text__title text-center">Clima y calendarios</h2>
-            <p class="calenario__text__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                pariatur
-                quas modi ex molestiae quia dolore consequuntur illum molestias saepe quam vero, quis suscipit aut
-                vel
-                ad dolorum ratione dolor!</p>
-
-        </div>
-        <div class="row d-flex justify-content-between ">
-            <div class="col-lg-2 text-center">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                        dy=".3em">140x140</text>
-                </svg>
-
-                <h2 class="fw-normal">Temperatura</h2>
-                <p>Some representative placeholder content for the three columns of text below the carousel. This is the
-                    first column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-            </div><!-- /.col-lg-2 text-center text-center-->
-            <div class="col-lg-2 text-center">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                        dy=".3em">140x140</text>
-                </svg>
-
-                <h2 class="fw-normal">Viento</h2>
-                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second
-                    column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-            </div><!-- /.col-lg-2 text-center text-center-->
-            <div class="col-lg-2 text-center">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                        dy=".3em">140x140</text>
-                </svg>
-
-                <h2 class="fw-normal">Marea</h2>
-                <p>And lastly this, the third column of representative placeholder content.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-            </div><!-- /.col-lg-2 text-center text-center-->
-            <div class="col-lg-2 text-center">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                        dy=".3em">140x140</text>
-                </svg>
-
-                <h2 class="fw-normal">Luna</h2>
-                <p>And lastly this, the third column of representative placeholder content.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-            </div><!-- /.col-lg-2 text-center text-center-->
-            <div class="col-lg-2 text-center">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                        dy=".3em">140x140</text>
-                </svg>
-
-                <h2 class="fw-normal">Calendarios</h2>
-                <p>And lastly this, the third column of representative placeholder content.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-            </div><!-- /.col-lg-2 text-center text-center-->
-        </div><!-- /.row -->
-    </div>
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -279,10 +114,6 @@
       <p></b></p>
     </div>
   </footer>
-
-
-
-
   <!--Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
