--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-  <!-- normalize -->
-  <link rel="stylesheet" type="text/css" href="./css/clima.css">
-
   <!-- Estilos Header -->
-  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./view/css/header.css">
   <!-- Estilos  -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./view/css/styles.css">
   <!-- Estilos Footer -->
-  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="./view/css/footer.css">
   <!-- Estilo boton clima-->
 </head>
 
@@ -40,9 +37,9 @@
 
   <!-- Header -->
   <header>
-    <a href="index.html" class="logo">
+    <a href="../index.html" class="logo">
 
-    <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+    <img src="./view/images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
 
     </a>
     <div>
@@ -58,13 +55,13 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="clima.html">CLIMA</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="view/clima.html">CLIMA</a></li>
+        <li><a href="view/calendarios.html">CALENDARIO</a></li>
+        <li><a href="view/shop.html">E-SHOP</a></li>
+        <li><a href="view/foro.html">FORO</a></li>
+        <li><a href="view/blog.html">BLOG</a></li>
+        <li><a href="view/contacto.html">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
@@ -81,21 +78,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item home active">
-        <img src="./images/header/img11.jpg" class="d-block w-100" alt="...">
+        <img src="./view/images/header/img11.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
       <div class="carousel-item home">
-        <img src="./images/header/img22.jpg" class="d-block w-100" alt="...">
+        <img src="./view/images/header/img22.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item home">
-        <img src="./images/header/img33.jpg" class="d-block w-100" alt="...">
+        <img src="./view/images/header/img33.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -119,7 +116,7 @@
   <!-- SECCION CLIMA - CALENDARIOS 
   ================================================== -->
 
-  <div class="container clima-calendario d-flex flex-column align-items-center mt-5">
+  <section class="container clima-calendario d-flex flex-column align-items-center mt-5">
 
     <!-- Three columns of text below the carousel -->
 
@@ -134,47 +131,47 @@
     </div>
     <div class="row d-flex justify-content-between ">
       <div class="col-lg-2 text-center">
-        <img src="images/clima/temperatura.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/temperatura.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+        <img src="view/images/clima/temperatura.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/temperatura.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
         <h2 class="fw-normal">Temperatura</h2>
           <p>Toda la información sobre el clima y condiciónes del ambiente aquí.</p>
-          <p><a class="btn-more" href="clima-temperatura.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="view/clima-temperatura.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+          <img src="view/images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Viento</h2>
           <p>Aquí encontrarás la información necesaria sobre los vientos para planear mejor tus salidas pesqueras.</p>
-          <p><a class="btn-more" href="clima-viento.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="view/clima-viento.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+          <img src="view/images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Marea</h2>
           <p>Entérate como esta la condición de la marea sobre la costa.</p>
-          <p><a class="btn-more" href="clima-marea.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="view/clima-marea.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+          <img src="view/images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Luna</h2>
           <p>Dicen que conocer las fases lunares es una ventaja a la hora de practicar este deporte, aprende más aquí.</p>
-          <p><a class="btn-more" href="Clima-luna.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="view/Clima-luna.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+          <img src="view/images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Apertura Pesca</h2>
           <p>Conoce más sobre torneos, eventos pasados y futuros, y más curiosidades aquí.</p>
-          <p><a class="btn-more" href="#"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="view/calendarios.html"><span>IR &raquo;</span></a></p>
         </div>
       </div>
-    </div>
+    </section>
   <!-- SECCION NEWSLETTER 
   ================================================== -->
 
-  <div class="col-md-6  rounded  container text-center bg-info p-5 mt-4 ml-10 mr-10">
+  <section class="col-md-6  rounded  container text-center bg-info p-5 mt-4 ml-10 mr-10">
     <h3 class="headline back text-white">REGISTRATE A NUESTRO NEWSLETTER</h3>
     <form class="main-form " method="post" action="./">
       <input id="email" class="width" name="email" type="text" placeholder="Introduzca su e-mail" />
       <button type="button" class="btn btn-more btn-outline-secondary btn-lg">REGISTRARSE</button>
     </form>
-  </div>
+  </section>
 
 
   <!-- SECCIÓN E-SHOP 
@@ -195,7 +192,7 @@
           <div class="carousel-item carousel-item-shop  active">
             <div class="col-7 container-card">
               <div class="card text-bg-dark ">
-                <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
+                <img src="view/images/shop/home/slide-1.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay ">
                   <h5 class="card-title text-center text-white text-bold">Pesca Deportiva</h5>
                 </div>
@@ -207,7 +204,7 @@
           <div class="carousel-item carousel-item-shop ">
             <div class="col-7  container-card">
               <div class="card text-bg-dark text-center text-white text-bold">
-                <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
+                <img src="view/images/shop/home/slide-2.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-white text-bold">Cañas</h5>
                 </div>
@@ -219,7 +216,7 @@
           <div class="carousel-item carousel-item-shop">
             <div class="col-7  container-card">
               <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
+                <img src="view/images/shop/home/slide-3.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-white text-bold">Anzuelos</h5>
                 </div>
@@ -231,7 +228,7 @@
           <div class="carousel-item carousel-item-shop">
             <div class="col-7  container-card">
               <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
+                <img src="view/images/shop/home/slide-4.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-white text-bold">Reeles</h5>
                 </div>
@@ -243,7 +240,7 @@
           <div class="carousel-item  carousel-item-shop">
             <div class="col-7  container-card">
               <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
+                <img src="view/images/shop/home/slide-5.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-white text-bold">Accesorios</h5>
                 </div>
@@ -255,7 +252,7 @@
           <div class="carousel-item carousel-item-shop">
             <div class="col-7  container-card">
               <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
+                <img src="view/images/shop/home/slide-6.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-white text-bold">Cajas</h5>
                 </div>
@@ -278,7 +275,7 @@
 
 
       <!-- Botón Ver más -->
-      <a href="shop.html">
+      <a href="view/shop.html">
         <button class="btn-more"><span>Ver más</span></button>
       </a>
       <!-- /Botón Ver más -->
@@ -294,7 +291,7 @@
   <!-- SECCIÓN FORO
 ==================================================================== -->
 
-  <div class="container-foro">
+  <section class="container-foro">
     <div class="foro-item">
 
       <h3 class="foro-title-sup">FORO INTERACTIVO</h3>
@@ -304,17 +301,17 @@
         conversacion y sacarte tus dudas. </p>
       <br>
       <!-- Botón Ver más -->
-      <a href="foro.html">
+      <a href="view/foro.html">
         <button class="btn-more"><span>Ver más</span></button>
       </a>
       <!-- /Botón Ver más -->
     </div>
     <div class="foro-item">
 
-      <img src="images/foro/HOME_foro.png" class="img-foro" alt="foro" tittle="FORO">
+      <img src="view/images/foro/HOME_foro.png" class="img-foro" alt="foro" tittle="FORO">
 
     </div>
-  </div>
+  </section>
 
   <!-- SECCIÓN BLOG
 ==================================================================== -->
@@ -332,7 +329,7 @@
       </div>
       <div class="col-lg-9 col-md-6 col-sm-6 col-xs-12 py-3 m-l 11 ">
         <figure>
-          <img alt="Silverfox" class="img-fluid rounded d-block m-l-none " src="./images/blog/tiburon.jpg">
+          <img alt="Silverfox" class="img-fluid rounded d-block m-l-none " src="view/images/blog/tiburon.jpg">
         </figure>
         <h4 class="title4-long-responsive-section izq blue font-bold text-uppercase"> Mirá el tiburón de especie
           desconocida que pescaron en Australia</h4>
@@ -343,14 +340,14 @@
 
       <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 py-3 m-r 11 ">
         <figure>
-          <img alt="Silverfox" class="img-fluid rounded  " src="./images/blog/pez.jpg">
+          <img alt="Silverfox" class="img-fluid rounded  " src="view/images/blog/pez.jpg">
         </figure>
         <h5 class="title4-long-responsive-section izq blue font-bold text-uppercase">Relatos a cielo abierto: Volver al
           origen</h5>
         <p>Un texto de Daniel Vadillo enumera los pasos que sigue un pescador novel, y de corta edad. </p>
 
         <figure>
-          <img class="img-fluid rounded d-block m-l-none " alt="Slogan" src="./images/blog/0921nino-1424210.jpg">
+          <img class="img-fluid rounded d-block m-l-none " alt="Slogan" src="view/images/blog/0921nino-1424210.jpg">
 
         </figure>
         <h5 class="title4-long-responsive-section izq blue font-bold text-uppercase">Las tarariras ya pican en Entre
@@ -363,7 +360,7 @@
       <div class="container text-center py-0">
         <div class="row">
           <!-- Botón Ver más -->
-          <a href="./blog.html">
+          <a href="./view/blog.html">
             <button class="btn-more"><span>Más novedades</span></button>
           </a>
           <!-- /Botón Ver más -->
