--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
       <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
-      <a href="login-registro.html">
+      <a href="view/login-registro.html">
         <button class="btn-more"><span>Ingresar</span></button>
       </a>
     </div>
