--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
-  <link rel="shortcut icon" href="./view/images/identidad/El-anzuelo-icono.png" type="image/png">
+  <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,25 +62,25 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item p-2">
-            <a href="../index.html">HOME</a>
+            <a href="index.html">HOME</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/clima.html">CLIMA</a>
+            <a href="view/clima.html">CLIMA</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/calendarios.html">CALENDARIO</a>
+            <a href="view/calendarios.html">CALENDARIO</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/shop.html">E-SHOP</a>
+            <a href="view/shop.html">E-SHOP</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/foro.html">FORO</a>
+            <a href="view/foro.html">FORO</a>
           </li>
           <li class="nav-item py-2">
-            <a href="../view/blog.html">BLOG</a>
+            <a href="view/blog.html">BLOG</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/contacto.html">CONTACTO</a>
+            <a href="view/contacto.html">CONTACTO</a>
           </li>
   
         </ul>
